# madr

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: integration-test.yml
app/: app.py  deps.py  models.py  schema.py
app/core/: security.py
app/routes/: auth.py  authors.py  books.py
locales/: en.toml  pt.toml
madr/: app.py  deps.py  exceptions.py  models.py  schema.py
madr/core/: database.py  i18n.py  security.py  settings.py
madr/core/orm/: __init__.py  mapping.py
madr/routes/: auth.py  authors.py  books.py
madr/utils/: caching.py  headers.py  sanitization.py
migrations/: env.py
migrations/versions/: 93584b655c7d_add_unique_constraints_for_name_and_.py  a38fdd145d83_initial_migration.py  bcf7fba43718_making_created_at_server_default.py
scripts/: docker-entrypoint.sh
tests/: conftest.py  factories.py  test_auth.py  test_authors.py  test_books.py  test_i18n.py
