[project]
name = "madr"
version = "0.1.0"
description = ""
authors = [
    {name = "Joao-Pedro-P-Holanda",email = "joaopedroph.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.12.1"
pytest = "^8.4.1"
aiosqlite = "^0.21.0"
freezegun = "^1.5.2"
factory-boy = "^3.3.3"
pytest-asyncio = "^1.1.0"
coverage = "^7.10.4"

[tool.taskipy.tasks]
test = "pytest"
lint = "ruff check --fix ."
