[project]
name = "madr"
version = "0.1.0"
description = ""
authors = [{ name = "Joao-Pedro-P-Holanda", email = "joaopedroph.dev@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.135.2",
    "sqlalchemy[asyncio]==2.0.48",
    "pyjwt==2.12.1",
    "pydantic-settings==2.13.1",
    "pwdlib[argon2]==0.3.0",
    "alembic==1.18.4",
    "pydantic-extra-types==2.11.1",
    "psycopg-binary==3.3.3",
    "psycopg==3.3.3",
]

[build-system]
requires = ["poetry-core==2.3.1"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black==26.3.1",
    "pytest==9.0.2",
    "aiosqlite==0.22.1",
    "freezegun==1.5.5",
    "factory-boy==3.3.3",
    "pytest-asyncio==1.3.0",
    "coverage==7.13.5",
]

[tool.fastapi]
entrypoint= "madr.app:app"
